--- a/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitLinkDialog.ui
+++ b/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitLinkDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>810</width>
-    <height>534</height>
+    <width>936</width>
+    <height>492</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,10 +18,13 @@
     <layout class="QHBoxLayout" name="horizontalLayout_10">
      <item>
       <layout class="QFormLayout" name="formLayout_6">
+       <property name="labelAlignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
        <item row="0" column="0">
         <widget class="QLabel" name="lbIdentification">
          <property name="text">
-          <string>Identification</string>
+          <string>Identification:</string>
          </property>
         </widget>
        </item>
@@ -31,7 +34,7 @@
        <item row="1" column="0">
         <widget class="QLabel" name="lbModification">
          <property name="text">
-          <string>Modification</string>
+          <string>Modification:</string>
          </property>
         </widget>
        </item>
@@ -41,7 +44,7 @@
        <item row="2" column="0">
         <widget class="QLabel" name="lbSinceVersion">
          <property name="text">
-          <string>Since version</string>
+          <string>Since version:</string>
          </property>
         </widget>
        </item>
@@ -56,10 +59,13 @@
      </item>
      <item>
       <layout class="QFormLayout" name="formLayout_3">
+       <property name="labelAlignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
        <item row="0" column="0">
         <widget class="QLabel" name="lbLinkType">
          <property name="text">
-          <string>Link type</string>
+          <string>Link type:</string>
          </property>
         </widget>
        </item>
@@ -69,7 +75,7 @@
        <item row="1" column="0">
         <widget class="QLabel" name="lbLinkDirection">
          <property name="text">
-          <string>Direction</string>
+          <string>Direction:</string>
          </property>
         </widget>
        </item>
@@ -88,40 +94,126 @@
         </layout>
        </item>
        <item row="2" column="0">
-        <widget class="QLabel" name="lbValue">
+        <widget class="QLabel" name="lbLength">
          <property name="text">
-          <string>Value</string>
+          <string>Length:</string>
          </property>
         </widget>
        </item>
        <item row="2" column="1">
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QDoubleSpinBox" name="sbValue">
-           <property name="decimals">
-            <number>3</number>
-           </property>
-           <property name="maximum">
-            <double>9999999.000000000000000</double>
-           </property>
-           <property name="singleStep">
-            <double>0.010000000000000</double>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="lbUnit">
-           <property name="text">
-            <string>Unit</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+        <widget class="mdtDoubleEdit" name="deLength">
+         <property name="unit">
+          <string>m</string>
+         </property>
+         <property name="minimum">
+          <double>0.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>1000000.000000000000000</double>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="lbResistance">
+         <property name="text">
+          <string>Resistance:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="mdtDoubleEdit" name="deResistance">
+         <property name="unit">
+          <string>Ω</string>
+         </property>
+         <property name="minimum">
+          <double>0.000000000000000</double>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
      <item>
-      <spacer name="horizontalSpacer_5">
+      <layout class="QFormLayout" name="formLayout_7">
+       <property name="labelAlignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+       <item row="0" column="0">
+        <widget class="QLabel" name="lbWire">
+         <property name="text">
+          <string>Wire:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QPushButton" name="pbSelectWire">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_5">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="lbWireModelLabel">
+         <property name="text">
+          <string>Model:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLabel" name="lbWireModel">
+         <property name="text">
+          <string>model</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="lbWireSectionLabel">
+         <property name="text">
+          <string>Section:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QLabel" name="lbWireSection">
+         <property name="text">
+          <string>section</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="lbWireColorEnLabel">
+         <property name="text">
+          <string>Color:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QLabel" name="lbWireColorEn">
+         <property name="text">
+          <string>color EN</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_6">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
@@ -573,6 +665,31 @@ p, li { white-space: pre-wrap; }
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>mdtDoubleEdit</class>
+   <extends>QWidget</extends>
+   <header>mdtDoubleEdit.h</header>
+  </customwidget>
+ </customwidgets>
+ <tabstops>
+  <tabstop>leIdentification</tabstop>
+  <tabstop>cbModification</tabstop>
+  <tabstop>cbSinceVersion</tabstop>
+  <tabstop>cbLinkType</tabstop>
+  <tabstop>cbLinkDirection</tabstop>
+  <tabstop>deLength</tabstop>
+  <tabstop>deResistance</tabstop>
+  <tabstop>pbStartUnit</tabstop>
+  <tabstop>cbShowOnlyUnusedStartConnections</tabstop>
+  <tabstop>pbStartConnection</tabstop>
+  <tabstop>pbStartVehicles</tabstop>
+  <tabstop>pbEndUnit</tabstop>
+  <tabstop>cbShowOnlyUnusedEndConnections</tabstop>
+  <tabstop>pbEndConnection</tabstop>
+  <tabstop>pbEndVehicles</tabstop>
+  <tabstop>buttonBox</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
