--- a/src/mdttools/mdtModbusIoTool.ui
+++ b/src/mdttools/mdtModbusIoTool.ui
@@ -73,8 +73,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>887</width>
-         <height>402</height>
+         <width>879</width>
+         <height>363</height>
         </rect>
        </property>
       </widget>
@@ -97,6 +97,8 @@
     </property>
     <addaction name="action_Setup"/>
     <addaction name="action_Quit"/>
+    <addaction name="actConnect"/>
+    <addaction name="actDisconnect"/>
    </widget>
    <widget class="QMenu" name="menu_Language">
     <property name="title">
@@ -107,6 +109,19 @@
    <addaction name="menu_Language"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actConnect"/>
+   <addaction name="actDisconnect"/>
+  </widget>
   <action name="action_Quit">
    <property name="text">
     <string>&amp;Quit</string>
@@ -115,6 +130,16 @@
   <action name="action_Setup">
    <property name="text">
     <string>&amp;Setup</string>
+   </property>
+  </action>
+  <action name="actConnect">
+   <property name="text">
+    <string>&amp;Connect</string>
+   </property>
+  </action>
+  <action name="actDisconnect">
+   <property name="text">
+    <string>&amp;Disconnect</string>
    </property>
   </action>
  </widget>
