Working on test tool GUI

--- a/src/mdttools/mdtModbusIoTool.ui
+++ b/src/mdttools/mdtModbusIoTool.ui
@@ -15,42 +15,21 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QPushButton" name="pbDisconnect">
-      <property name="text">
-       <string>Disconnect</string>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="1">
-     <widget class="QPushButton" name="pbAbortScan">
-      <property name="text">
-       <string>Abort</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="2">
-     <widget class="QPushButton" name="pbConnect">
-      <property name="text">
-       <string>Connect</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="3">
      <widget class="QLabel" name="lbHwNodeId">
       <property name="text">
        <string>Node ID:</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="4">
+    <item row="0" column="2">
      <widget class="QSpinBox" name="sbHwNodeId">
       <property name="maximum">
        <number>255</number>
       </property>
      </widget>
     </item>
-    <item row="0" column="5">
+    <item row="0" column="3">
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -63,7 +42,7 @@
       </property>
      </spacer>
     </item>
-    <item row="1" column="0" colspan="6">
+    <item row="1" column="0" colspan="4">
      <widget class="QScrollArea" name="saIos">
       <property name="widgetResizable">
        <bool>true</bool>
@@ -74,7 +53,7 @@
          <x>0</x>
          <y>0</y>
          <width>879</width>
-         <height>363</height>
+         <height>364</height>
         </rect>
        </property>
       </widget>
@@ -99,6 +78,7 @@
     <addaction name="action_Quit"/>
     <addaction name="actConnect"/>
     <addaction name="actDisconnect"/>
+    <addaction name="actAbortScan"/>
    </widget>
    <widget class="QMenu" name="menu_Language">
     <property name="title">
@@ -120,6 +100,7 @@
     <bool>false</bool>
    </attribute>
    <addaction name="actConnect"/>
+   <addaction name="actAbortScan"/>
    <addaction name="actDisconnect"/>
   </widget>
   <action name="action_Quit">
@@ -140,6 +121,11 @@
   <action name="actDisconnect">
    <property name="text">
     <string>&amp;Disconnect</string>
+   </property>
+  </action>
+  <action name="actAbortScan">
+   <property name="text">
+    <string>&amp;Abort scan</string>
    </property>
   </action>
  </widget>
