--- a/src/mdttools/mdttesttool/mdtTtTestModelItemEditor.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestModelItemEditor.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>931</width>
-    <height>251</height>
+    <width>1169</width>
+    <height>216</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -201,60 +201,87 @@
     </layout>
    </item>
    <item row="5" column="0">
-    <widget class="QLabel" name="lbLimitMin">
+    <widget class="QLabel" name="lbLimitsLabel">
      <property name="text">
-      <string>Limit min:</string>
+      <string>Limits:</string>
      </property>
     </widget>
    </item>
    <item row="5" column="1">
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="mdtDoubleEdit" name="fld_LimitValueMin"/>
-     </item>
-     <item>
-      <widget class="QLabel" name="lbLimitMax">
-       <property name="text">
-        <string>limit max:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="mdtDoubleEdit" name="fld_LimitValueMax"/>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pbEditLimitMinMax">
-       <property name="text">
-        <string>...</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="6" column="0">
-    <widget class="QLabel" name="lbFailMin">
-     <property name="text">
-      <string>Fail min:</string>
+    <layout class="QHBoxLayout" name="horizontalLayout_5">
+     <property name="spacing">
+      <number>10</number>
      </property>
-    </widget>
-   </item>
-   <item row="6" column="1">
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="mdtDoubleEdit" name="fld_FailValueMin"/>
-     </item>
-     <item>
-      <widget class="QLabel" name="lbFailMax">
+      <widget class="QLabel" name="lbLeftBottomLimit">
        <property name="text">
-        <string>Fail max:</string>
+        <string>Left bottom limit:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="mdtDoubleEdit" name="fld_FailValueMax"/>
+      <widget class="QLabel" name="fld_LeftBottomLimit">
+       <property name="text">
+        <string>left bottom limit</string>
+       </property>
+      </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pbEditFailMinMax">
+      <widget class="QLabel" name="lbLeftTopLimit">
+       <property name="text">
+        <string>Left top limit:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="fld_LeftTopLimit">
+       <property name="text">
+        <string>left top limit</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="lbRightBottomLimit">
+       <property name="text">
+        <string>Right bottom limit:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="fld_RightBottomLimit">
+       <property name="text">
+        <string>right bottom limit</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="lbRightTopLimit">
+       <property name="text">
+        <string>Right top limit:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="fld_RightTopLimit">
+       <property name="text">
+        <string>right top limit</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pbEditLimits">
        <property name="text">
         <string>...</string>
        </property>
@@ -289,70 +316,6 @@
     <hint type="destinationlabel">
      <x>361</x>
      <y>146</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>fld_ValueUnit</sender>
-   <signal>currentIndexChanged(QString)</signal>
-   <receiver>fld_LimitValueMin</receiver>
-   <slot>setUnit(QString)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>220</x>
-     <y>249</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>417</x>
-     <y>180</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>fld_ValueUnit</sender>
-   <signal>currentIndexChanged(QString)</signal>
-   <receiver>fld_LimitValueMax</receiver>
-   <slot>setUnit(QString)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>220</x>
-     <y>249</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>821</x>
-     <y>180</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>fld_ValueUnit</sender>
-   <signal>currentIndexChanged(QString)</signal>
-   <receiver>fld_FailValueMin</receiver>
-   <slot>setUnit(QString)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>220</x>
-     <y>249</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>418</x>
-     <y>215</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>fld_ValueUnit</sender>
-   <signal>currentIndexChanged(QString)</signal>
-   <receiver>fld_FailValueMax</receiver>
-   <slot>setUnit(QString)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>220</x>
-     <y>249</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>821</x>
-     <y>215</y>
     </hint>
    </hints>
   </connection>
