--- a/src/mdttools/mdttesttool/mdtTtValueEditionDialog.ui
+++ b/src/mdttools/mdttesttool/mdtTtValueEditionDialog.ui
@@ -6,218 +6,124 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>572</width>
-    <height>476</height>
+    <width>598</width>
+    <height>190</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Value and limits edition</string>
   </property>
-  <widget class="QLabel" name="lbValue">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>38</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Value:</string>
-   </property>
-  </widget>
-  <widget class="mdtDoubleEdit" name="deValue">
-   <property name="geometry">
-    <rect>
-     <x>46</x>
-     <y>4</y>
-     <width>236</width>
-     <height>32</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="lbLimit">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>32</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Limit:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="lbFail">
-   <property name="geometry">
-    <rect>
-     <x>18</x>
-     <y>69</y>
-     <width>24</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Fail:</string>
-   </property>
-  </widget>
-  <widget class="QDialogButtonBox" name="buttonBox">
-   <property name="geometry">
-    <rect>
-     <x>400</x>
-     <y>430</y>
-     <width>165</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-   </property>
-  </widget>
-  <widget class="QGroupBox" name="gbLimit">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>100</y>
-     <width>375</width>
-     <height>109</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>Limit values</string>
-   </property>
-   <layout class="QFormLayout" name="formLayout">
-    <item row="0" column="0">
-     <widget class="QLabel" name="lbLimitMin">
-      <property name="text">
-       <string>Min:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
-       <widget class="mdtDoubleEdit" name="deLimitMin"/>
-      </item>
-      <item>
-       <widget class="QDoubleSpinBox" name="sbLimitMin">
-        <property name="suffix">
-         <string>%</string>
-        </property>
-        <property name="minimum">
-         <double>-100.000000000000000</double>
-        </property>
-        <property name="maximum">
-         <double>0.000000000000000</double>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="lnLimitMax">
-      <property name="text">
-       <string>Max:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="mdtDoubleEdit" name="deLimitMax"/>
-      </item>
-      <item>
-       <widget class="QDoubleSpinBox" name="sbLimitMax">
-        <property name="suffix">
-         <string>%</string>
-        </property>
-        <property name="maximum">
-         <double>100.000000000000000</double>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QGroupBox" name="groupBox_2">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>220</y>
-     <width>451</width>
-     <height>121</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>GroupBox</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="lbLimitRange">
-   <property name="geometry">
-    <rect>
-     <x>225</x>
-     <y>41</y>
-     <width>16</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QDoubleSpinBox" name="sbFailMax">
-   <property name="geometry">
-    <rect>
-     <x>138</x>
-     <y>70</y>
-     <width>83</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="suffix">
-    <string>%</string>
-   </property>
-   <property name="maximum">
-    <double>100.000000000000000</double>
-   </property>
-  </widget>
-  <widget class="QLabel" name="lbFailRange">
-   <property name="geometry">
-    <rect>
-     <x>225</x>
-     <y>70</y>
-     <width>16</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QDoubleSpinBox" name="sbFailMin">
-   <property name="geometry">
-    <rect>
-     <x>47</x>
-     <y>70</y>
-     <width>87</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="suffix">
-    <string>%</string>
-   </property>
-   <property name="minimum">
-    <double>-100.000000000000000</double>
-   </property>
-   <property name="maximum">
-    <double>0.000000000000000</double>
-   </property>
-  </widget>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <layout class="QFormLayout" name="formLayout">
+       <item row="0" column="0">
+        <widget class="QLabel" name="lbValue">
+         <property name="text">
+          <string>Value:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="mdtDoubleEdit" name="deValue"/>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="lbLimit">
+         <property name="text">
+          <string>Limit:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QLabel" name="lbLimitRange">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="lbFail">
+         <property name="text">
+          <string>Fail:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QDoubleSpinBox" name="sbFailMin">
+           <property name="suffix">
+            <string>%</string>
+           </property>
+           <property name="minimum">
+            <double>-100.000000000000000</double>
+           </property>
+           <property name="maximum">
+            <double>0.000000000000000</double>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QDoubleSpinBox" name="sbFailMax">
+           <property name="suffix">
+            <string>%</string>
+           </property>
+           <property name="maximum">
+            <double>100.000000000000000</double>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="4" column="1">
+        <widget class="QLabel" name="lbFailRange">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <customwidgets>
   <customwidget>
