--- a/src/mdttools/mdttesttool/mdtTtTestNodeRouteDialog.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestNodeRouteDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>505</width>
-    <height>188</height>
+    <width>564</width>
+    <height>222</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -50,53 +50,79 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <layout class="QFormLayout" name="formLayout">
+       <property name="fieldGrowthPolicy">
+        <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+       </property>
        <item row="0" column="0">
-        <widget class="QLabel" name="lbSourceUnit">
+        <widget class="QLabel" name="lbUnitAType">
          <property name="text">
-          <string>Source unit:</string>
+          <string>Type:</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QComboBox" name="cbSourceUnit"/>
-       </item>
        <item row="1" column="0">
-        <widget class="QLabel" name="lbSourceConnection">
+        <widget class="QLabel" name="lbUnitA">
+         <property name="text">
+          <string>Unit A:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="cbUnitA"/>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="lbConnectionA">
          <property name="text">
           <string>Connection</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
-        <widget class="QComboBox" name="cbSourceConnection">
+       <item row="2" column="1">
+        <widget class="QComboBox" name="cbConnectionA">
          <property name="sizeAdjustPolicy">
           <enum>QComboBox::AdjustToContents</enum>
          </property>
         </widget>
        </item>
+       <item row="0" column="1">
+        <widget class="QComboBox" name="cbUnitAType"/>
+       </item>
       </layout>
      </item>
      <item>
       <layout class="QFormLayout" name="formLayout_2">
+       <property name="fieldGrowthPolicy">
+        <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+       </property>
        <item row="0" column="0">
-        <widget class="QLabel" name="lbDestinationUnit">
+        <widget class="QLabel" name="lbUnitBType">
          <property name="text">
-          <string>Test connector:</string>
+          <string>Type:</string>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QComboBox" name="cbDestinationUnit"/>
+        <widget class="QComboBox" name="cbUnitBType"/>
        </item>
        <item row="1" column="0">
-        <widget class="QLabel" name="lbDestinationConnection">
+        <widget class="QLabel" name="lbUnitB">
+         <property name="text">
+          <string>Unit B:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="cbUnitB"/>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="lbConnectionB">
          <property name="text">
           <string>Connection:</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
-        <widget class="QComboBox" name="cbDestinationConnection">
+       <item row="2" column="1">
+        <widget class="QComboBox" name="cbConnectionB">
          <property name="sizeAdjustPolicy">
           <enum>QComboBox::AdjustToContents</enum>
          </property>
