--- a/src/mdttools/mdttesttool/mdtTtTestNodeRouteDialog.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestNodeRouteDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>564</width>
-    <height>222</height>
+    <width>618</width>
+    <height>339</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -133,25 +133,59 @@
     </layout>
    </item>
    <item>
-    <layout class="QFormLayout" name="formLayout_3">
-     <property name="fieldGrowthPolicy">
-      <enum>QFormLayout::ExpandingFieldsGrow</enum>
+    <widget class="QGroupBox" name="gbRelays">
+     <property name="title">
+      <string>Relays to enable</string>
      </property>
-     <item row="0" column="0">
-      <widget class="QLabel" name="lbRelaysLabel">
-       <property name="text">
-        <string>Relays to enable:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLabel" name="lbRelays">
-       <property name="text">
-        <string>......................</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QRadioButton" name="rbAuto">
+        <property name="text">
+         <string>Auto</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="rbManual">
+        <property name="text">
+         <string>Manual</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="leRelays"/>
+      </item>
+      <item>
+       <widget class="QToolButton" name="tbAddRelay">
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset theme="list-add"/>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="gbName">
+     <property name="title">
+      <string>Route name</string>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QLabel" name="lbName">
+        <property name="text">
+         <string>Route name:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="leName"/>
+      </item>
+     </layout>
+    </widget>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
