--- a/src/mdttools/mdttesttool/mdtTtTestSystemComponentEditor.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestSystemComponentEditor.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>618</width>
-    <height>216</height>
+    <height>203</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,6 +40,12 @@
    </item>
    <item>
     <widget class="QTabWidget" name="tabWidget">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>150</height>
+      </size>
+     </property>
      <property name="currentIndex">
       <number>0</number>
      </property>
