--- a/src/mdttools/mdttesttool/mdtTtTestSystemComponentEditor.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestSystemComponentEditor.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>618</width>
-    <height>203</height>
+    <width>617</width>
+    <height>228</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -33,6 +33,34 @@
        </property>
        <property name="maxLength">
         <number>32769</number>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="lbTypeNameEN">
+       <property name="text">
+        <string>Type:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLabel" name="TypeNameEN">
+       <property name="text">
+        <string>TypeNameEN</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QToolButton" name="pbSetType">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="lbSetType">
+       <property name="text">
+        <string>Set:</string>
        </property>
       </widget>
      </item>
